<?xml version="1.0"?>
<!--
  Placeholder package.xml.
  Paste your provided package.xml here if you want to keep your original metadata.
-->
<package format="3">
  <name>hexa_description</name>
  <version>0.0.0</version>
  <description>Hexapod description package (URDF + meshes).</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>
</package>
