<?xml version="1.0"?>
<package format="3">
  <name>ros2_policy_runner</name>
  <version>0.0.0</version>
  <description>Minimal ROS2 wrapper for PPO PolicyRunner</description>
  <maintainer email="amosincat26@gmail.com">Andrei Mosincat</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>stable_baselines3</exec_depend>
  <exec_depend>numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
