<?xml version="1.0"?>
<package format="3">
  <name>ros2_policy_runner</name>
  <version>0.0.0</version>
  <description>Minimal ROS2 wrapper for PPO PolicyRunner</description>
  <maintainer email="maintainer@example.com">Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>simulation_interfaces</depend>

  <depend>rosidl_default_generators</depend>
  <build_depend>ament_cmake_python</build_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <exec_depend>stable_baselines3</exec_depend>
  <exec_depend>numpy</exec_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
